[workspace]
resolver = "2"
members = [
    "cli",
    "lib_common",
    "misc",
    "servers",
    "project_tests",
    "vendor/json5format",
    "vendor/pmdaemon"
]

[profile.release]
strip = true      # Strip symbols from the binary to reduce size
lto = true        # Enable Link Time Optimization for better runtime performance
codegen-units = 1 # Compile as a single unit for better optimization
panic = "abort" # Optional: helps reduce size

[workspace.dependencies]
# My own crates
lib_common = { path = "./lib_common" }
json5format = { path = "./vendor/json5format" }

# --- Async Runtime & Core Utilities ---
# A utility library for working with bytes.
bytes = "1"
# Channels for asynchronous communication.
futures-channel = "0.3"
# Common utilities and extension traits for the futures-rs library.
futures-util = "0.3.31"
# An event-driven, non-blocking I/O platform for writing asynchronous I/O-backed applications.
tokio = { version = "1.48.0", features = ["full"] }
# A library for scheduling tasks with cron-like expressions.
tokio-cron-scheduler = "0.15.1"
# A utility for graceful shutdown of tokio applications.
tokio-graceful = "0.2.2"
# Add this to the [workspace.dependencies] section of your ROOT Cargo.toml
tokio-util = { version = "0.7.13", features = ["rt"] }

# --- Web Frameworks & Networking ---
# A powerful, pragmatic, and extremely fast web framework for Rust.
actix-web = { version = "4", features = ["rustls-0_23"] }
# An ergonomic and modular web framework built with Tokio, Tower, and Hyper.
axum = { version = "0.8.4", features = ["ws"] }
# A library for running axum handlers with custom listeners.
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
# A library of types for HTTP requests and responses.
http = "1.0.0"
# An HTTP client library for Rust.
reqwest = { version = "0.12", features = ["json", "blocking"] }
# Composable HTTP client middleware for reqwest.
reqwest-middleware = "0.3"
# Retry middleware for reqwest.
reqwest-retry = "0.6"
# Tokio binding for Tungstenite, the lightweight stream-based WebSocket implementation.
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-native-roots", "native-tls"] }
# A URL parsing library.
url = "2.5"
tower-http = { version = "0.5", features = ["cors"] }

# --- Database & Cache ---
# A dead-simple async pool for tokio-postgres.
deadpool-postgres = "0.14.1"
# A native-tls implementation for rust-postgres.
postgres-native-tls = "0.5"
# Conversions between Rust and Postgres values.
postgres-types = { version = "0.2.12", features = ["derive"] }
# A Redis driver for Rust.
redis = { version = "1.0.3", features = ["tokio-comp", "connection-manager"] }
# A native, asynchronous PostgreSQL client.
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4", "with-serde_json-1"] }
# A rustls implementation for tokio-postgres.
tokio-postgres-rustls = "0.13.0"

# --- Serialization & Data Formats ---
# A parser for the JSON5 data format.
json5 = "1.3.0"
# A Protocol Buffers implementation for the Rust Language.
prost = "0.14.3"
# A Protocol Buffers implementation for the Rust Language - build support.
prost-build = "0.14.3"
# A generic serialization/deserialization framework.
serde = { version = "1.0.218", features = ["derive"] }
# Macros 1.1 implementation of #[derive(Serialize, Deserialize)].
serde_derive = "1.0.228"
# A JSON serialization file format.
serde_json = "1.0.139"
# A JSON5 serialization file format.
serde_json5 = "0.2.1"
# A YAML serialization file format.
serde_yml = "0.0.12"

# --- Cryptography & Security ---
# A crate for implementing AES block ciphers.
aes = "0.8.4"
# A library for encoding and decoding data in Base64.
base64 = "0.22.1"
# A crate that provides traits and functions for block padding.
block-padding = "0.3.3"
# A crate for implementing Cipher Block Chaining (CBC) mode for block ciphers.
cbc = { version = "0.1.2", features = ["alloc"] }
# A crate that provides traits for cryptographic ciphers.
cipher = "0.4"
# A library for encoding and decoding data in hexadecimal format.
hex = "0.4.3"
# A crate that provides an abstraction over native TLS implementations.
native-tls = "0.2.12"
# A modern, safer, and faster TLS library.
rustls = { version = "0.23", features = ["ring"] }
# A crate for loading TLS keys and certificates from native certificate stores.
rustls-native-certs = "0.8"
# A basic .pem file parser for keys and certificates.
rustls-pemfile = "2"
# Shared types for the rustls ecosystem.
rustls-pki-types = "1"
# A crate that provides the SHA-2 family of hash functions.
sha2 = "0.10"
# A library for working with webpki roots.
webpki-roots = "0.26"

# --- Logging, Tracing & Error Handling ---
# Flexible concrete Error type built on std::error::Error.
anyhow = "1.0.97"
# A library for coloring terminal output.
colored = "3.1.1"
# A logging implementation for `log` which is configured via an environment variable.
env_logger = "0.11.8"
# A configurable logger for Rust.
fern = "0.7.1"
# A lightweight logging facade for Rust.
log = "0.4.27"
# This library provides a convenient derive macro for the standard library’s std::error::Error trait.
thiserror = "2.0.18"
# Application-level tracing for Rust.
tracing = "0.1.41"
# A tracing-appender based on localtime (chrono).
tracing-appender = "0.2.3"
# Utilities for implementing and composing `tracing` subscribers.
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

# --- System, Config & CLI ---
# A library for structured access to the output of `cargo metadata`.
cargo_metadata = "0.23.1"
# A simple-to-use, efficient, and full-featured command-line argument parser.
clap = { version = "4.5.29", features = ["derive", "env"] }
# A tiny library for finding standard locations of configuration and data files.
dirs = "6.0.0"
# A well-maintained fork of the dotenv crate to load environment variables from a .env file.
dotenvy = "0.15.7"
# A library for getting the hostname of the current system.
hostname = "0.4.0"
# A library for getting the local IP address of the current system.
local-ip-address = "0.6.10"
# A crate that provides support for configuration.
more-config = { version = "2.1.5", features = ["all", "async"] }
# Safe mutable static and non-const static initialization, and code execution at program startup/exit.
static_init = "1.0.3"
# A library for parsing command-line arguments.
structopt = "0.3.26"

# --- Filesystem & Utility ---
# A library for working with dates and times.
chrono = { version = "0.4", default-features = false, features = ["serde"] }
# TimeZone implementations for chrono from the IANA database.
chrono-tz = { version = "0.10.3", default-features = false }
# A crate for finding files that match a glob pattern.
glob = "0.3.1"
# A fast library for reading .gitignore files.
ignore = "0.4.22"
# A crate for generating random numbers.
rand = "0.9.1"
# A regular expression library for Rust.
regex = "1.12.3"
# A library for managing temporary files and directories.
tempfile = "3.24.0"
# A crate for recursively walking directory trees.
walkdir = "2.5.0"
# A library for reading and writing ZIP archives.
zip = "8.0.0"

# --- Audio ---
# A cross-platform library that provides easy-to-use beep functions.
actually_beep = "0.1.0"
# An audio playback library.
rodio = { version = "0.21.1", default-features = false, features = ["playback", "symphonia-all"] }
