[workspace]
resolver = "2"

# Workspace members: The individual crates within this repository
members = [
    "cli",
    "lib_common",
    "misc",
    "servers",
    "project_tests",
    "vendor/json5format",
    "vendor/pmdaemon"
]

# --- PROFILES ---

# // Removed invalid .cap-lints keys to stop manifest warnings
[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev.package.json5format]
cap-lints = "allow"

[profile.dev]
opt-level = 0
debug = true

# --- SHARED DEPENDENCIES ---

[workspace.dependencies]
# INTERNAL WORKSPACE LIBRARIES
lib_common = { path = "./lib_common" }
json5format = { path = "./vendor/json5format" }

# ASYNC RUNTIME & CORE UTILITIES
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["rt"] }
tokio-cron-scheduler = "0.15.1"
tokio-graceful = "0.2.2"
futures-channel = "0.3"
futures-util = "0.3.31"
bytes = "1"

# WEB FRAMEWORKS & NETWORKING
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
actix-web = { version = "4", features = ["rustls-0_23"] }
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
http = "1.0.0"
url = "2.5"
reqwest = { version = "0.12", features = ["json", "blocking"] }
reqwest-middleware = "0.3"
reqwest-retry = "0.6"
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-native-roots", "native-tls"] }

# DATABASE & CACHE
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "macros"] }
dashmap = "6.1.0"
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = "0.14.1"
redis = { version = "1.0.3", features = ["tokio-comp", "connection-manager"] }
postgres-types = { version = "0.2.12", features = ["derive"] }
postgres-native-tls = "0.5"
tokio-postgres-rustls = "0.13.0"

# SERIALIZATION & DATA FORMATS
serde = { version = "1.0.218", features = ["derive"] }
serde_derive = "1.0.228"
serde_json = "1.0.139"
serde_yml = "0.0.12"
serde_json5 = "0.2.1"
json5 = "1.3.0"
prost = "0.14.3"
prost-build = "0.14.3"
uuid = { version = "1.20.0", features = ["v4", "serde"] }

# CRYPTOGRAPHY & SECURITY
rustls = { version = "0.23", features = ["ring"] }
rustls-native-certs = "0.8"
rustls-pemfile = "2"
rustls-pki-types = "1"
native-tls = "0.2.12"
webpki-roots = "0.26"
aes = "0.8.4"
sha2 = "0.10"
hex = "0.4.3"
base64 = "0.22.1"
cbc = { version = "0.1.2", features = ["alloc"] }
cipher = "0.4"
block-padding = "0.3.3"
age = "0.10"

# LOGGING, TRACING & ERROR HANDLING
log = "0.4.27"
env_logger = "0.11.8"
fern = "0.7.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"
anyhow = "1"
thiserror = "2"
colored = "3.1.1"

# SYSTEM & CLI UTILITIES
clap = { version = "4", features = ["derive", "env"] }
structopt = "0.3.26"
more-config = { version = "2.1.5", features = ["all", "async"] }
dotenvy = "0.15.7"
dirs = "6.0.0"
hostname = "0.4.0"
local-ip-address = "0.6.10"
cargo_metadata = "0.23.1"
static_init = "1.0.3"
gethostname = "1.1.0"
sysinfo = "0.38.2"

# FILESYSTEM & UTILITY
chrono = { version = "0.4", default-features = false, features = ["serde"] }
chrono-tz = { version = "0.10.3", default-features = false }
walkdir = "2.5.0"
glob = "0.3.1"
ignore = "0.4.22"
tempfile = "3.24.0"
rand = "0.9.1"
regex = "1.12.3"
zip = "8"
notify = "6.1"

# AUDIO
rodio = { version = "0.21.1", default-features = false, features = ["playback", "symphonia-all"] }
actually_beep = "0.1.0"

# MISC
async-trait = "0.1"