[package]
name = "rs_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
# For rs_encrypt
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["alloc"] }
block-padding = "0.3.3" # For PKCS7 padding DO NOT CHANGE VERSION
rand = "0.9.1"
base64 = "0.22.1"
hex = "0.4.3"

# For j5-to-json
serde_json5 = "0.2.1"
serde_json = "1.0.140"
clap = { version = "4.5.40", features = ["derive"] }

# For zip
anyhow = "1.0.95"
walkdir = "2.5.0"
zip = "7.0.0"
glob = "0.3.1"

# For j5-to-yaml
regex = "1.10"
json5 = "1.3.0"
serde_yml = "0.0.12"

# For j5-format
json5format = { workspace = true }
structopt = "0.3.26"

[[bin]]
name = "j5-format"
path = "src/j5-format.rs"

[[bin]]
name = "j5-to-json"
path = "src/j5-to-json.rs"

[[bin]]
name = "j5-to-yaml"
path = "src/j5-to-yaml.rs"

[[bin]]
name = "js-paths"
path = "src/js-paths.rs"

[[bin]]
name = "rs_encrypt"
path = "src/rs_encrypt.rs"

[[bin]]
name = "zip"
path = "src/zip.rs"
