[package]
name = "rs_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
# For rs_encrypt
aes = { workspace = true }
cbc = { workspace = true }
block-padding = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

# For j5-to-json
serde_json5 = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }

# For zip
anyhow = { workspace = true }
walkdir = { workspace = true }
zip = { workspace = true }
glob = { workspace = true }

# For j5-to-yaml
regex = { workspace = true }
json5 = { workspace = true }
serde_yml = { workspace = true }

# For j5-format
json5format = { workspace = true }
structopt = { workspace = true }

[[bin]]
name = "j5-format"
path = "src/j5-format.rs"

[[bin]]
name = "j5-to-json"
path = "src/j5-to-json.rs"

[[bin]]
name = "j5-to-yaml"
path = "src/j5-to-yaml.rs"

[[bin]]
name = "js-paths"
path = "src/js-paths.rs"

[[bin]]
name = "rs_encrypt"
path = "src/rs_encrypt.rs"

[[bin]]
name = "zip"
path = "src/zip.rs"
