[package]
name = "rs_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
# A crate for implementing AES block ciphers.
aes = { workspace = true }
# Flexible concrete Error type built on std::error::Error.
anyhow = { workspace = true }
# A library for encoding and decoding data in Base64.
base64 = { workspace = true }
# A crate that provides traits and functions for block padding.
block-padding = { workspace = true }
# A library for structured access to the output of `cargo metadata`.
cargo_metadata = { workspace = true }
# A crate for implementing Cipher Block Chaining (CBC) mode for block ciphers.
cbc = { workspace = true }
# A simple-to-use, efficient, and full-featured command-line argument parser.
clap = { workspace = true }
# A crate for finding files that match a glob pattern.
glob = { workspace = true }
# A library for encoding and decoding data in hexadecimal format.
hex = { workspace = true }
# A parser for the JSON5 data format.
json5 = { workspace = true }
# A library for formatting JSON5 data.
json5format = { workspace = true }
# A crate for generating random numbers.
rand = { workspace = true }
# A regular expression library for Rust.
regex = { workspace = true }
# A JSON serialization file format.
serde_json = { workspace = true }
# A JSON5 serialization file format.
serde_json5 = { workspace = true }
# A YAML serialization file format.
serde_yml = { workspace = true }
# A generic serialization/deserialization framework.
serde = { workspace = true, features = ["derive"] }
# A library for parsing command-line arguments.
structopt = { workspace = true }
# A fast library for reading .gitignore files.
ignore = { workspace = true }
# A crate for recursively walking directory trees.
walkdir = { workspace = true }
# A library for reading and writing ZIP archives.
zip = { workspace = true }

[[bin]]
name = "j5-format"
path = "src/j5-format.rs"

[[bin]]
name = "j5-to-json"
path = "src/j5-to-json.rs"

[[bin]]
name = "j5-to-yaml"
path = "src/j5-to-yaml.rs"

[[bin]]
name = "js-paths"
path = "src/js-paths.rs"

[[bin]]
name = "local-deps-tree"
path = "src/local-deps-tree.rs"

[[bin]]
name = "rs_encrypt"
path = "src/rs_encrypt.rs"

[[bin]]
name = "zip"
path = "src/zip.rs"

[[bin]]
name = "dir-to-yaml"
path = "src/dir-to-yaml.rs"
