[package]
name = "misc"
version = "0.1.0"
edition = "2024"

[dependencies]
# Disable default features to remove C decoders (vorbis, flac, etc.)
# Enable 'symphonia-all' for pure-Rust decoding of almost any format
# 'playback' is the feature that enables the 'cpal' dependency internally
rodio = { workspace = true }
chrono = { workspace = true }       # Time formatting and duration
tokio = { workspace = true } # Async runtime for the loop
tokio-postgres = { workspace = true }
clap = { workspace = true }
redis = { workspace = true }
native-tls = { workspace = true }
postgres-native-tls = { workspace = true }
tokio-postgres-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rustls-native-certs = { workspace = true }
webpki-roots = { workspace = true }
reqwest = { workspace = true }
fern = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }

# My own crates
lib_common = { workspace = true }

[[bin]]
name = "audio_test"
path = "src/audio_test.rs"

[[bin]]
name = "monitor_net"
path = "src/monitor_net.rs"

[[bin]]
name = "monitor_postgres"
path = "src/monitor_postgres.rs"

[[bin]]
name = "monitor_redis"
path = "src/monitor_redis.rs"
