[package]
name = "misc"
version = "0.1.0"
edition = "2024"

[dependencies]
# Flexible concrete Error type built on std::error::Error.
anyhow = { workspace = true }
# A library for working with dates and times.
chrono = { workspace = true }
# A simple-to-use, efficient, and full-featured command-line argument parser.
clap = { workspace = true }
# A configurable logger for Rust.
fern = { workspace = true }
# A shared library for this project.
lib_common = { workspace = true }
# A lightweight logging facade for Rust.
log = { workspace = true }
# A crate that provides an abstraction over native TLS implementations.
native-tls = { workspace = true }
# A native-tls implementation for rust-postgres.
postgres-native-tls = { workspace = true }
# A Redis driver for Rust.
redis = { workspace = true }
# An HTTP client library for Rust.
reqwest = { workspace = true }
# An audio playback library.
rodio = { workspace = true }
# A modern, safer, and faster TLS library.
rustls = { workspace = true }
# A crate for loading TLS keys and certificates from native certificate stores.
rustls-native-certs = { workspace = true }
# A basic .pem file parser for keys and certificates.
rustls-pemfile = { workspace = true }
# A generic serialization/deserialization framework.
serde = { workspace = true }
# A JSON serialization file format.
serde_json = { workspace = true }
# An event-driven, non-blocking I/O platform for writing asynchronous I/O-backed applications.
tokio = { workspace = true }
# A native, asynchronous PostgreSQL client.
tokio-postgres = { workspace = true }
# A rustls implementation for tokio-postgres.
tokio-postgres-rustls = { workspace = true }
# A URL parsing library.
url = { workspace = true }
# A library for working with webpki roots.
webpki-roots = { workspace = true }

[[bin]]
name = "audio_test"
path = "src/audio_test.rs"

[[bin]]
name = "monitor_net"
path = "src/monitor_net.rs"

[[bin]]
name = "monitor_postgres"
path = "src/monitor_postgres.rs"

[[bin]]
name = "monitor_redis"
path = "src/monitor_redis.rs"
