[package]
name = "project_tests"
version = "0.1.0"
edition = "2024"

[dependencies]
lib_common = { path = "../lib_common" }
tokio = { workspace = true, features = ["full"] } # Explicitly enable full features for tests
tempfile = { workspace = true }
serde_json = { workspace = true } # For Value in loggerlocal
chrono = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio-tungstenite = { workspace = true }
clap = { workspace = true, features = ["derive"] }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
url = { workspace = true }

[[bin]]
name = "test_loggerlocal"
path = "src/test_loggerlocal.rs"

[[bin]]
name = "test_ky_http"
path = "src/test_ky_http.rs"
