[package]
name = "project_tests"
version = "0.1.0"
edition = "2024"

[dependencies]
# // Statement: Core workspace library with all modules enabled for testing
lib_common = { workspace = true, features = ["full"] }

# // Statement: Async runtime and utility dependencies
tokio = { workspace = true, features = ["full"] } 
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true } 
anyhow = { workspace = true }
chrono = { workspace = true }

# // Statement: Network and diagnostic dependencies
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
url = { workspace = true }
tempfile = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
clap = { workspace = true, features = ["derive"] }

# [[bin]]
# name = "test_loggerlocal"
# path = "src/test_loggerlocal.rs"

# [[bin]]
# name = "test_ky_http"
# path = "src/test_ky_http.rs"

# // Binary: Test runner for Nasdaq market status live data
[[bin]]
name = "test_marketstatus"
path = "src/test_marketstatus.rs"